--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -20,7 +20,7 @@ target_link_libraries(testkodaymatrix
   Qt5::Test
 )
 
-add_executable(koeventpopmenutest koeventpopupmenutest.cpp ../koeventpopupmenu.cpp ../kocorehelper.cpp ../noteeditdialog.cpp ../korganizer_debug.cpp)
+add_executable(koeventpopmenutest koeventpopupmenutest.cpp ../koeventpopupmenu.cpp ../kocorehelper.cpp ../dialog/noteeditdialog.cpp ../korganizer_debug.cpp)
 add_test(koeventpopmenutest koeventpopupmenutest)
 ecm_mark_as_test(koeventpopmenutest)
 target_link_libraries(koeventpopmenutest
@@ -38,7 +38,7 @@ target_link_libraries(koeventpopmenutest
   korganizerprivate
 )
 
-add_executable(noteeditdialogtest noteeditdialogtest.cpp ../noteeditdialog.cpp ../korganizer_debug.cpp)
+add_executable(noteeditdialogtest noteeditdialogtest.cpp ../dialog/noteeditdialog.cpp ../korganizer_debug.cpp)
 add_test(noteeditdialogtest noteeditdialogtest)
 ecm_mark_as_test(noteeditdialogtest)
 target_link_libraries(noteeditdialogtest
