Move in own directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,7 +186,7 @@ set(korganizerprivate_LIB_SRCS
     kowindowlist.cpp
     widgets/navigatorbar.cpp
     dialog/searchdialog.cpp
-    searchcollectionhelper.cpp
+    helper/searchcollectionhelper.cpp
     views/agendaview/koagendaview.cpp
     views/journalview/kojournalview.cpp
     views/listview/kolistview.cpp
