--- a/kontactplugin/korganizer/CMakeLists.txt
+++ b/kontactplugin/korganizer/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-include_directories(${CMAKE_SOURCE_DIR}/korganizer ${CMAKE_SOURCE_DIR}/korganizer/interfaces ${Boost_INCLUDE_DIRS})
+include_directories(${CMAKE_SOURCE_DIR}/korganizer ${CMAKE_SOURCE_DIR}/korganizer/interfaces )
 
 
 
