--- a/kontactplugin/korganizer/CMakeLists.txt
+++ b/kontactplugin/korganizer/CMakeLists.txt
@@ -1,5 +1,6 @@
 ########### next target ###############
-set(libcommon_SRCS korg_uniqueapp.cpp korganizerplugin_debug.cpp)
+set(libcommon_SRCS korg_uniqueapp.cpp)
+ecm_qt_declare_logging_category(libcommon_SRCS HEADER korganizerplugin_debug.h IDENTIFIER KORGANIZERPLUGIN_LOG CATEGORY_NAME log_korganizer_plugin)
 
 set(kontact_korganizerplugin_PART_SRCS korganizerplugin.cpp apptsummarywidget.cpp summaryeventinfo.cpp ${libcommon_SRCS})
 
