--- a/plugins/picoftheday/CMakeLists.txt
+++ b/plugins/picoftheday/CMakeLists.txt
@@ -8,8 +8,9 @@ include_directories(
 set(korg_picoftheday_PART_SRCS
   configdialog.cpp
   picoftheday.cpp
-  korganizer_picoftheday_plugin_debug.cpp
 )
+
+ecm_qt_declare_logging_category(korg_picoftheday_PART_SRCS HEADER korganizer_picoftheday_plugin_debug.h IDENTIFIER KORGANIZERPICOFTHEDAYPLUGIN_LOG CATEGORY_NAME log_korganizer_picoftheday_plugins)
 
 add_library(korg_picoftheday MODULE ${korg_picoftheday_PART_SRCS})
 
