--- a/kontactplugin/korganizer/CMakeLists.txt
+++ b/kontactplugin/korganizer/CMakeLists.txt
@@ -8,7 +8,7 @@ qt5_add_dbus_interfaces(kontact_korganizerplugin_PART_SRCS ${CMAKE_SOURCE_DIR}/k
 
 add_library(kontact_korganizerplugin MODULE ${kontact_korganizerplugin_PART_SRCS})
 
-target_link_libraries(kontact_korganizerplugin KF5::AkonadiCalendar KF5::CalendarUtils KF5::Contacts KF5::CalendarCore kdepim KF5::KontactInterface korganizerprivate calendarsupport KF5::AkonadiCalendar)
+target_link_libraries(kontact_korganizerplugin KF5::AkonadiCalendar KF5::CalendarUtils KF5::Contacts KF5::CalendarCore KF5::Libkdepim KF5::KontactInterface korganizerprivate calendarsupport KF5::AkonadiCalendar)
 
 ########### next target ###############
 
@@ -18,7 +18,7 @@ qt5_add_dbus_interfaces(kontact_todoplugin_PART_SRCS ${CMAKE_SOURCE_DIR}/korgani
 
 add_library(kontact_todoplugin MODULE ${kontact_todoplugin_PART_SRCS})
 
-target_link_libraries(kontact_todoplugin KF5::AkonadiCalendar  KF5::Contacts kdepim KF5::KontactInterface KF5::CalendarCore KF5::CalendarUtils calendarsupport KF5::AkonadiCalendar)
+target_link_libraries(kontact_todoplugin KF5::AkonadiCalendar  KF5::Contacts KF5::Libkdepim KF5::KontactInterface KF5::CalendarCore KF5::CalendarUtils calendarsupport KF5::AkonadiCalendar)
 
 ########### next target ###############
 
