--- a/plugins/hebrew/CMakeLists.txt
+++ b/plugins/hebrew/CMakeLists.txt
@@ -16,7 +16,7 @@ set(korg_hebrew_PART_SRCS
 add_library(korg_hebrew MODULE ${korg_hebrew_PART_SRCS})
 
 target_link_libraries(korg_hebrew
-  eventviews
+  KF5::EventViews
 )
 
 install(TARGETS
