--- a/interfaces/korganizer/CMakeLists.txt
+++ b/interfaces/korganizer/CMakeLists.txt
@@ -10,7 +10,7 @@ add_library(korganizer_interfaces ${korganizer_interfaces_LIB_SRCS})
 generate_export_header(korganizer_interfaces BASE_NAME korganizer_interfaces)
 target_link_libraries(korganizer_interfaces
   KF5::CalendarSupport
-  eventviews
+  KF5::EventViews
   KF5::AkonadiCore
 )
 
