--- a/plugins/picoftheday/CMakeLists.txt
+++ b/plugins/picoftheday/CMakeLists.txt
@@ -15,7 +15,7 @@ ecm_qt_declare_logging_category(korg_picoftheday_PART_SRCS HEADER korganizer_pic
 add_library(korg_picoftheday MODULE ${korg_picoftheday_PART_SRCS})
 
 target_link_libraries(korg_picoftheday
-  eventviews
+  KF5::EventViews
   KF5::KIOCore
 )
 
