--- a/plugins/thisdayinhistory/CMakeLists.txt
+++ b/plugins/thisdayinhistory/CMakeLists.txt
@@ -12,7 +12,7 @@ set(korg_thisdayinhistory_PART_SRCS
 add_library(korg_thisdayinhistory MODULE ${korg_thisdayinhistory_PART_SRCS})
 
 target_link_libraries(korg_thisdayinhistory
-  eventviews
+  KF5::EventViews
 )
 
 install(TARGETS
